--- a/example/example_ipynb/cifar_10_auc.ipynb
+++ b/example/example_ipynb/cifar_10_auc.ipynb
@@ -6,17 +6,17 @@
    "source": [
     "## XCurve Library\n",
     "\n",
-    "This code imports several libraries and modules. \n",
+    "This code imports several libraries and modules.\n",
     "\n",
-    "### Import optimier, loss function, dataset and dataloader.\n",
+    "### Import optimizer, loss function, dataset, and dataloader.\n",
     "\n",
-    " - Firstly, `easydict` library is imported and aliased as `edict`. This library provides a simple way to create a nested dictionary and allows accessing its keys as attributes.\n",
+    "- Firstly, the `easydict` library is imported and aliased as `edict`. This library provides a simple way to create nested dictionaries and allows access to its keys as attributes.\n",
     "\n",
-    " - Next, `torch` library is imported, which is the main PyTorch package. Then, the `SGD` optimizer is imported from `torch.optim`. This optimizer is used to optimize the model parameters during training. Alternatively, any other optimizer supported by PyTorch can also be used.\n",
+    "- Next, the `torch` library is imported, which is the main PyTorch package. Then, the `SGD` optimizer is imported from `torch.optim`. This optimizer is used to optimize the model parameters during training. **Alternatively, any other optimizer supported by PyTorch can also be used.**\n",
     "\n",
-    " - Additionally, `SquareAUCLoss` is imported from `XCurve.AUROC.losses`. This loss function is used to compute the loss for the Area Under the Receiver Operating Characteristic Curve (AUROC).\n",
+    "- Additionally, `SquareAUCLoss` is imported from `XCurve.AUROC.losses`. This loss function is used to compute the loss for the Area Under the Receiver Operating Characteristic Curve (AUROC).\n",
     "\n",
-    " - Finally, `get_datasets` and `get_data_loaders` functions are imported from `XCurve.AUROC.dataloaders`. These functions are used to get the Xcurve dataset and data loaders respectively."
+    "- Finally, the `get_datasets` and `get_data_loaders` functions are imported from `XCurve.AUROC.dataloaders`. These functions are used to obtain the Xcurve dataset and data loaders, respectively."
    ]
   },
   {
@@ -37,11 +37,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup the parameters, create model.\n",
+    "### Set up the parameters, create the model.\n",
     "\n",
-    "In the provided code, a deep learning model is created using the `generate_net` function from the `XCurve.AUROC.models` module. This function generates a neural network model of a specified type (e.g. resnet18, resnet20, densenet121, or mlp). \n",
+    "In the provided code, a deep learning model is created using the `generate_net` function from the `XCurve.AUROC.models` module. This function generates a neural network model of a specified type (e.g., resnet18, resnet20, densenet121, or mlp).\n",
     "\n",
-    "The `args` variable is an `edict`, which is a dictionary-like object that allows attribute-style access (e.g. `args.model_type` instead of `args['model_type']`). It contains the parameters for creating the model. Some of the important parameters are explained below:\n",
+    "The `args` variable is an `edict`, which is a dictionary-like object that allows attribute-style access (e.g., `args.model_type` instead of `args['model_type']`). It contains the parameters for creating the model. Some of the essential parameters are explained below:\n",
     "\n",
     "- `model_type`: This parameter specifies the type of model to be generated. In this case, it is set to `\"resnet18\"`, which means that a ResNet-18 model will be generated.\n",
     "\n",
@@ -49,9 +49,9 @@
     "\n",
     "- `pretrained`: This parameter specifies whether the model should be loaded with pre-trained weights. In this case, it is set to `None`, which means that the model will not be pre-trained.\n",
     "\n",
-    "The `generate_net` function returns a PyTorch model object, which is stored in the `model` variable. The model is then moved to the GPU using the `cuda` method.\n",
+    "The `generate_net` function returns a PyTorch model object, stored in the `model` variable. The model is then moved to the GPU using the `cuda` method.\n",
     "\n",
-    "It is worth noting that the `generate_net` function is part of the XCurve package, which is a Python package for computing the Area Under the Receiver Operating Characteristic Curve (AUROC) and other performance metrics for binary and multi-class classification problems. For more information on the XCurve package, please refer to the original paper [here](https://arxiv.org/abs/1811.03867)."
+    "It is worth noting that the `generate_net` function is part of the XCurve package, which is a Python package for computing the Area Under the Receiver Operating Characteristic Curve (AUROC) and other performance metrics for binary and multi-class classification problems."
    ]
   },
   {
@@ -80,17 +80,17 @@
     "\n",
     "In the provided code, the `num_classes` variable is set to `2`. This variable specifies the number of classes in the classification problem.\n",
     "\n",
-    "The `optimizer` variable is created using the `SGD` optimizer from the `torch.optim` module. This optimizer is used to update the parameters of the model during training. The learning rate for the optimizer is set to `0.01`.\n",
+    "The `optimizer` variable is created using the `SGD` optimizer from the `torch.optim` module. This optimizer is employed to update the model's parameters during training. The learning rate for the optimizer is set to `0.01`.\n",
     "\n",
-    "The `criterion` variable is created using the `SquareAUCLoss` loss criterion. This criterion is used to compute the loss during training. Some of the important parameters for the `SquareAUCLoss` criterion are explained below:\n",
+    "The `criterion` variable is created using the `SquareAUCLoss` loss criterion. This criterion computes the loss during training. Some of the essential parameters for the `SquareAUCLoss` criterion are explained below:\n",
     "\n",
-    "- `num_classes`: This parameter specifies the number of classes in the classification problem. In this case, since we have 2 classes, `num_classes` is set to `2`.\n",
+    "- `num_classes`: This parameter specifies the number of classes in the classification problem. In this case, since we have two classes, `num_classes` is set to `2`.\n",
     "\n",
-    "- `gamma`: This parameter specifies the safe margin for the loss. If the distance between a sample and the decision boundary of its true class is less than `gamma`, the sample is considered as correctly classified.\n",
+    "- `gamma`: This parameter specifies the safe margin for the loss. If the distance between a sample and the decision boundary of its true class is less than `gamma`, the sample is considered correctly classified.\n",
     "\n",
-    "- `transform`: This parameter specifies the manner of computing the multi-classes AUROC Metric. In this case, it is set to `\"ovo\"`, which stands for \"one-vs-one\". This means that all possible pairs of classes are compared and the AUROC metric is computed for each pair separately. The final AUROC score is the average of all the pairwise scores.\n",
+    "- `transform`: This parameter specifies the manner of computing the multi-class AUROC Metric. In this case, it is set to `\"ovo\"`, which stands for \"one-vs-one\". This means that all possible pairs of classes are compared, and the AUROC metric is computed for each pair separately. The final AUROC score is the average of all pairwise scores.\n",
     "\n",
-    "It is worth noting that the `SquareAUCLoss` criterion is a variant of the Area Under the Receiver Operating Characteristic Curve (AUROC) loss criterion that is typically used in binary classification problems. For more information on the `SquareAUCLoss` criterion, please refer to the original paper [here](https://arxiv.org/abs/1811.03867)."
+    "It is worth noting that the `SquareAUCLoss` criterion is a variant of the Area Under the Receiver Operating Characteristic Curve (AUROC) loss criterion typically employed in binary classification problems."
    ]
   },
   {
@@ -115,25 +115,25 @@
    "source": [
     "### Create Dataset (train_set, val_set, test_set) and dataloader (trainloader)\n",
     "\n",
-    "In the provided code, the `dataset_args` dictionary contains various parameters that are used to configure the dataset. Some of the important parameters in the `dataset_args` dictionary are explained below:\n",
+    "In the provided code, the `dataset_args` dictionary contains various parameters used to configure the dataset. Some of the crucial parameters in the `dataset_args` dictionary are explained below:\n",
     "\n",
     "- `data_dir`: This parameter specifies the relative path of the dataset. In this case, the dataset is stored in the `cifar-10-long-tail/` directory.\n",
     "\n",
-    "- `input_size`: This parameter specifies the size of the input images in pixels. Here, the input images have a size of 32x32 pixels.\n",
+    "- `input_size`: This parameter specifies the size of the input images in pixels. Here, the input images have a dimension of 32x32 pixels.\n",
     "\n",
-    "- `norm_params`: This parameter contains the normalization parameters for the dataset. Specifically, it contains the mean and standard deviation values for the RGB channels of the images.\n",
+    "- `norm_params`: This parameter contains the normalization parameters for the dataset. Specifically, it includes the mean and standard deviation values for the RGB channels of the images.\n",
     "\n",
     "- `use_lmdb`: This parameter specifies whether the dataset should be loaded as an LMDB database or not.\n",
     "\n",
-    "- `sampler`: This parameter is only used for binary classification and contains the sampling rate for positive and negative examples in the dataset.\n",
+    "- `sampler`: This parameter is only employed for binary classification and contains the sampling rate for positive and negative examples in the dataset.\n",
     "\n",
     "- `aug`: This parameter specifies whether data augmentation should be used during training or not.\n",
     "\n",
-    "- `class2id`: This parameter is a dictionary that maps the class labels to their corresponding IDs. Here, the minority class has a label of `1` and all other classes have a label of `0`.\n",
+    "- `class2id`: This parameter is a dictionary mapping the class labels to their corresponding IDs. Here, the minority class has a label of `1` and all other classes have a label of `0`.\n",
     "\n",
-    "The `get_datasets()` function is used to load the dataset and create train, validation and test datasets. The `get_data_loaders()` function is then used to create dataloaders for the train, validation and test datasets.\n",
+    "The `get_datasets()` function is utilized to load the dataset and create train, validation, and test datasets. The `get_data_loaders()` function is then employed to create dataloaders for the train, validation, and test datasets.\n",
     "\n",
-    "It is worth noting that the `get_datasets()` function uses stratified sampling for the train set. Specifically, it uses the `StratifiedSampler` from the `XCurve.AUROC.dataloaders` module to ensure that the number of samples from each class is balanced in the train set.\n",
+    "It is worth noting that the `get_datasets()` function utilizes stratified sampling for the train set. Specifically, it employs the `StratifiedSampler` from the `XCurve.AUROC.dataloaders` module to ensure that the number of samples from each class is balanced in the train set.\n",
     "\n",
     "For more information on the `StratifiedSampler`, please refer to the official PyTorch documentation [here](https://pytorch.org/docs/stable/data.html#torch.utils.data.StratifiedSampler)."
    ]
@@ -191,27 +191,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train the model\n",
+    "### Train the model\n",
     "\n",
-    "The provided code block describes the forward pass of a neural network model for one epoch. \n",
+    "The provided code block delineates the forward pass of a neural network model for one epoch.\n",
     "\n",
-    " - In the line 1, a `for` loop is used to iterate over the training data loader (`trainloader`). The `enumerate` function is used to iterate over the data loader with an index. For each iteration of the loop, a batch of input (`x`) and target (`target`) tensors are extracted from the `trainloader` and moved to the GPU using the `cuda()` method.\n",
+    "- In line 1, a `for` loop is employed to iterate over the training data loader (`trainloader`). The `enumerate` function is utilized to iterate over the data loader with an index. For each iteration of the loop, a batch of input (`x`) and target (`target`) tensors are extracted from the `trainloader` and transferred to the GPU using the `cuda()` method.\n",
     "\n",
-    " - In the line 2, the shape of the `target` tensor is printed. This tensor has a shape of `[batch_size, ]`, where `batch_size` is the number of samples in the current batch. It is also noted that the model is expected to output predictions in the range of `[0, 1]` for binary (i.e., sigmoid) or multi-class (i.e., softmax) AUROC optimization.\n",
+    "- In line 2, the shape of the `target` tensor is printed. This tensor has a shape of `[batch_size, ]`, where `batch_size` is the number of samples in the current batch. It is also noted that the model is anticipated to output predictions in the range of `[0, 1]` for binary (i.e., sigmoid) or multi-class (i.e., softmax) AUROC optimization.\n",
     "\n",
-    " - In the line 3, the input tensor `x` is passed through the model using the `model` object. The output of the model is a tensor of shape `[batch_size, num_classes]` if `num_classes > 2`, or `[batch_size, ]` otherwise. This output tensor is passed through a sigmoid function using the `torch.sigmoid` method to obtain a probability distribution over the classes.\n",
+    "- In line 3, the input tensor `x` is passed through the model using the `model` object. The output of the model is a tensor of shape `[batch_size, num_classes]` if `num_classes > 2`, or `[batch_size, ]` otherwise. This output tensor is passed through a sigmoid function using the `torch.sigmoid` method to obtain a probability distribution over the classes.\n",
     "\n",
-    " - In the line 4, the binary cross-entropy loss is computed between the predicted probabilities and the true targets using the `criterion` object. \n",
+    "- In line 4, the binary cross-entropy loss is calculated between the predicted probabilities and the true targets using the `criterion` object.\n",
     "\n",
-    " - In the line 5, the current loss value is printed to the console if the current iteration index is a multiple of 30.\n",
+    "- In line 5, the current loss value is displayed on the console if the current iteration index is a multiple of 30.\n",
     "\n",
-    " - In the line 6, the gradients of the loss with respect to the model parameters are computed using the `backward` method.\n",
+    "- In line 6, the gradients of the loss concerning the model parameters are computed using the `backward` method.\n",
     "\n",
-    " - In the line 7, the optimizer's gradients are set to zero using the `zero_grad` method.\n",
+    "- In line 7, the optimizer's gradients are set to zero employing the `zero_grad` method.\n",
     "\n",
-    " - In the line 8, the optimizer's step function is called using the `step` method to update the model parameters based on the computed gradients.\n",
+    "- In line 8, the optimizer's step function is invoked using the `step` method to update the model parameters based on the computed gradients.\n",
     "\n",
-    "It is worth noting that the backward pass and optimizer step functions are used to update the model's parameters and improve its performance during training. For more information on training deep neural networks, please refer to the original paper [here](https://arxiv.org/abs/1804.07612)."
+    "It is worth noting that the backward pass and optimizer step functions are employed to update the model's parameters and enhance its performance during training."
    ]
   },
   {
