--- a/example/example_ipynb/cifar_10_pauc.ipynb
+++ b/example/example_ipynb/cifar_10_pauc.ipynb
@@ -110,7 +110,7 @@
     "8. The `first_state_loss` parameter specifies the loss function to be used during the warm-up epochs.\n",
     "9. The `eps` parameter is used to avoid zero gradient.\n",
     "\n",
-    "Overall, the creation of the loss criterion and the optimizer are crucial steps in training a deep neural network model. The SGD optimizer is a commonly used optimization algorithm in deep learning, and the PAUCLoss function is a specialized loss function that has been shown to improve the performance of binary classification models. The parameters of the PAUCLoss function can be fine-tuned to optimize the performance of the model for specific tasks. For more information on the PAUCLoss function, please refer to the original paper [here](https://ieeexplore.ieee.org/document/8415427)."
+    "Overall, the creation of the loss criterion and the optimizer are crucial steps in training a deep neural network model. The SGD optimizer is a commonly used optimization algorithm in deep learning, and the PAUCLoss function is a specialized loss function that has been shown to improve the performance of binary classification models. The parameters of the PAUCLoss function can be fine-tuned to optimize the performance of the model for specific tasks."
    ]
   },
   {
